<resources>
    <string name="app_name">J管理</string>
    <string-array name="NOW_JUGGLER">
        <item>SアイムジャグラーEX</item>
        <item>Sファンキージャグラー2</item>
        <item>Sマイジャグラー5</item>
        <item>SハッピージャグラーVⅢ</item>
        <item>Sゴーゴージャグラー3</item>
    </string-array>
    <string-array name="JUGGLER">
        <item>SアイムジャグラーEX</item>
        <item>Sファンキージャグラー2</item>
        <item>Sマイジャグラー5</item>
        <item>SハッピージャグラーVⅢ</item>
        <item>Sゴーゴージャグラー3</item>

        
        

    </string-array>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="back">戻る</string>
    <string name="release">解除</string>
    <string name="cancel">キャンセル</string>
    <string name="delete">削除</string>
    <string name="init">初期化</string>
    <string name="finish">完了</string>
    <string name="edit">編集</string>
    <string name="advance">進む</string>
    <string name="upper_limit_count_toast">カウント回数上限に達しました</string>
    <string name="lower_limit_count_toast">カウント回数下限に達しました</string>
    <string name="store_count">登録店舗数：%1$d件</string>
    <string name="not_use_string">使用できない文字が含まれています</string>
    <string name="upper_limit_store_toast">店舗数が上限に達しました</string>
    <string name="not_blank_store_name">店舗名が空白のため登録できません</string>
    <string name="already_store_name">すでに登録されている店舗名です</string>
    <string name="add_store">%1$sが追加されました</string>
    <string-array name="DIALOG_MENU">
        <item>上に移動</item>
        <item>下に移動</item>
        <item>店舗メモ</item>
        <item>店舗名編集</item>
        <item>削除</item>
    </string-array>
    <string name="not_up_toast">一番上のアイテムのため移動できません</string>
    <string name="up_toast">上に移動しました</string>
    <string name="not_down_toast">一番下のアイテムのため移動できません</string>
    <string name="down_toast">下に移動しました</string>
    <string name="hint_before_name">編集前：%1$s</string>
    <string name="rename_tittle">店舗名編集</string>
    <string name="rename_message">新しい店舗名を入力してください\n※変更は登録データに反映されません</string>
    <string name="rename">変更</string>
    <string name="rename_toast">%1$sを%2$sに変更しました</string>
    <string name="delete_store_tittle">登録店舗削除</string>
    <string name="delete_store_message">「%1$s」をリストから削除してよろしいですか？</string>
    <string name="delete_toast">削除しました</string>
    <string name="default_memo">〇店舗の特徴・傾向\n</string>
    <string name="not_register_alert">特殊文字の検出</string>
    <string name="not_register_alert_message">特殊文字は削除されます</string>
    <string name="memo_delete_alert">店舗メモの初期化</string>
    <string name="memo_delete_alert_message">入力されているメモを初期化します\nよろしいですか？</string>
    <string name="memo_delete_toast">メモを初期化しました</string>
    <string name="stealth_release_tittle">ステルス機能の解除について</string>
    <string name="stealth_release_message">減算モードを利用する場合はステルス機能を解除する必要があります</string>
    <string name="stealth_toast">ステルス機能が解除されました</string>
    <string name="plus_minus_release_tittle">減算状態の解除について</string>
    <string name="plus_minus_release_message">ステルス機能を利用する場合は減算状態を解除する必要があります</string>
    <string name="plus_minus_toast">ボタン押下時は加算されます</string>
    <string name="vib_off">バイブ機能をOFFにしました</string>
    <string name="vib_on">バイブ機能をONにしました</string>
    <string name="flash_off">フラッシュをOFFにしました</string>
    <string name="flash_on">フラッシュをONにしました</string>
    <string name="counter_init_tittle">カウンター初期化</string>
    <string name="counter_init_message">カウンターを全てリセットしますか？</string>
    <string name="counter_init_toast">リセットしました</string>
    <string name="add_store_tittle">店舗登録のお願い</string>
    <string name="add_store_message">データ保存する場合は店舗登録を行ってください</string>
    <string name="go_add_store">店舗登録へ</string>
    <string name="zero_game_toast">０ゲームでの登録はできません</string>
    <string name="select_date_toast">日付を選択してください</string>
    <string name="register_toast">データを登録しました</string>
    <string name="save_data_count">登録件数：%1$d件</string>
    <string name="not_selection">未選択</string>
    <string name="reset_dialog_tittle">条件クリア</string>
    <string name="reset_dialog_message">クリアする項目を選んでください</string>
    <string name="reset_dialog_date">日付のみ</string>
    <string name="reset_dialog_all">全てクリア</string>
    <string name="clear_date_toast">日付をクリアしました</string>
    <string name="clear_all_toast">全てクリアしました</string>
    <string name="tittle_data_count">対象データ数：%1$d件</string>
    <string name="all_total_games">総ゲーム数\n%1$d回転</string>
    <string name="all_total_bb">BIG\n%1$d回\n%2$s</string>
    <string name="all_total_rb">REG\n%1$d回\n%2$s</string>
    <string name="all_total_bonus">合算\n%1$d回\n%2$s</string>
    <string name="all_total_attention">算出結果は概算であることに\n留意してください</string>
    <string name="save_count">%1$d件/50件</string>
    <string name="manual_string">
        \n
        ★J管理について★
        \n主にジャグラーの実践データを管理し、保存したデータを元に各種統計データを簡易的に閲覧するためのアプリです。
        \n主な機能と使い方については、以下の通りです。
        \n
        \n
        【店舗管理】\n
        ◆普段稼働するホールが登録できます。\n
        ◆店舗名は最大20文字まで登録できます。\n
        ◆登録できる店舗数は20店舗です。\n
        \nまた、登録した店舗は店舗一覧上でタップすることで以下の機能が使えます。\n
        \n
        ◆上/下に移動\n
        登録店舗一覧に表示される店舗順を変更できます。\n
        ◆店舗メモ\n
        登録店舗の設定投入傾向等を自由に編集できます。\n
        ◆店舗名編集\n
        登録した店舗名を編集できます。\n
        ※すでに保存されたデータには店舗名の変更は反映されません。\n
        ◆削除\n
        登録店舗一覧上から削除します。\n
        \n
        \n
        【小役カウンター】
        \n実践データを保存するための基本的な小役カウンター機能が利用できます。\n
        ◆現在ホールに導入されているジャグラー機種を選択できます。\n
        ◆開始ゲーム数および総ゲーム数を入力することで個人ゲーム数を算出できます。\n
        ◆各種役物に対応したボタンをタップすることで回数をカウントできます。\n
        \n上記に加えて画面右上のメニュー画面より以下の機能が使えます。\n
        \n
        ◆編集モード\n
        カウント回数を直接操作できるようになります。\n
        ◆加減算モード\n
        ボタンのタップ回数に応じてカウント回数を加算・減算します。減算モード時はカウント回数等が赤字になります。\n
        ◆ステルス機能\n
        カウント回数および確率を非表示にします。\n
        ※減算モードとステルスモードは併用できません。\n
        ◆バイブON/OFF\n
        ボタンタップ時のバイブ有無を設定できます。\n
        ◆フラッシュON/OFF\n
        ボタンタップ時のフラッシュ有無を設定できます。\n
        ◆カウンター初期化\n
        ゲーム数および各種小役カウントを初期化します。\n
        ◆データ保存\n
        各種実践データを保存できます。\n
        ※個人ゲーム数が0ゲームでの保存はできません。\n
        \n
        データ保存画面については以下の通りです。\n
        ◆日付
        \nカレンダーから稼働日を選択してください。\n
        ◆店舗名
        \n登録店舗から稼働した店舗を選択してください。\n
        ※表示される店舗順は店舗登録画面の一覧に表示されている順となります。\n
        ◆台番号
        \n台番号を入力してください。\n
        ◆差枚数
        \n差枚数を入力してください。
        \nマイナス入力をしたい場合は入力欄右側のチェックを有効にしてください。
        \n最後に登録ボタンを押すことでデータを保存できます。
        \n※保存できない場合は表示されるメッセージに従ってください。\n
        \n
        \n
        【成績照会】\n
        成績照会画面では主に二つの機能を利用できます。\n
        １.個別データ\n
        ２.統計データ
        \nなお、それぞれの画面については画面上部のタブで切り替えることができます。
        \nまた、個別データ一覧画面において、登録件数表示が緑色の時はタップすると「選択削除」もしくは「全削除」のダイアログが表示され、選択した項目ごとにデータを削除できます。
        \n
        \n
        １.個別データについて
        \n過去に保存したデータの一覧が表示されます。なお、表示は稼働日の新しい順かつデータの保存日時が新しい順となります。
        \n各データはそれぞれタップすることが可能であり、画面遷移後は保存データの詳細を閲覧できます。
        \nまた、以下の機能が使えます。\n
        ◆編集ボタン
        \n機種名およびゲーム数、各種小役カウントを編集できるようになります。\n
        ◆削除ボタン
        \n保存データを削除できます。
        \n※一度削除したデータを元に戻すことはできません。\n
        \n編集ボタン押下後は「マイナス」と「更新」ボタンが画面上部に出現します。\n
        \n
        ◆マイナスボタン
        \n各種役物に対応したボタンをタップすることでカウント数を減算できます。\n
        ◆プラスボタン
        \n加算モードに切り替わります。\n
        ◆更新ボタン
        \n保存データの内容を更新できます。\n
        ※個人ゲーム数が0ゲームでの更新できません。\n
        \n
        ２.統計データについて
        \n保存したデータから各種統計データを閲覧することができます。
        \n日付の範囲指定・店舗名・機種名・台番号・●の付く日・ゾロ目や月と日が同じなどの特別な日・月や日の個別指定・月内週・曜日・台番号末尾などの項目を組み合わせることで保存されたデータから特定の条件に合致した統計を算出できます。
        \n条件を組み合わせたら表示ボタンを押すことでデータを閲覧できます。
        \n
        \n
        【各種ツール関係】\n
        １.全台合算
        \nゲーム数・BB回数・RB回数を入力することで合算値を自動計算します。
        \n(例)621ゲーム・BB3回・RB2回の場合、06210302と入力してください。
        \n一度に最大25台まで計算できますが、さらに計算したい場合は画面上部の「値を保持してリセット」を押すことで計算を続けることができます。
        \n
        \n
        ２.全台合算(概算版)
        \nBB回数・RB回数・合成確率の分母3桁を入力することでゲーム数を算出、各ボーナス確率を概算で算出します。
        \n(例)BB7回・RB12回・合成確率1/130の場合、0712130と入力してください。
        \n一度に最大25台まで計算できますが、さらに計算したい場合は画面上部の「値を保持してリセット」を押すことで計算を続けることができます。
        \nなお、あくまで概算であることに留意してください。
        \n
        \n
        ３.出目保存
        \n閉店間際の出目を保存できます。
        \n基本的には該当の出目ボタンを押すと画面上にセットされます。
        \n保存した出目を確認する場合は、右上に「確認」を押すことで見ることができます。
        \n
        \n
        \nJ管理：プライバシーポリシー
        \n本プライバシーポリシーは、本アプリの利用者の個人情報もしくはそれに準ずる情報を取り扱う際に、本アプリが厳守する方針を示したものです。
        \n○免責事項
        \n本アプリのコンテンツ・情報につきまして、可能な限り正確な情報を掲載するよう努めておりますが、誤情報が入り込んだり、情報が古くなっていることもございます。
        \n本アプリの使用によって生じた損害等の一切の責任を負いかねますのでご了承ください。
        \n○プライバシーポリシーの変更について
        \n当方は、個人情報に関して適用される日本の法令を遵守するとともに、本ポリシーの内容を適宜見直しその改善に努めます。
        \n事業内容の変更、法令の改正等により、事前に公表することなく任意の時期に変更される場合が有ります。
        \n○お問い合わせ
        \n本アプリに関するお問い合わせは、以下アドレスにて受け付けております。
        \nj.management.app@gmail.com







    </string>
    <string-array name="SET_TITTLES">
        <item>総回転数</item>
        <item>差枚数</item>
        <item>機械割</item>
        <item>単独BIG</item>
        <item>チェBIG</item>
        <item>BIG合算</item>
        <item>単独REG</item>
        <item>チェREG</item>
        <item>REG合算</item>
        <item>ボーナス合算</item>
        <item>ぶどう</item>
        <item>非重複チェリー</item>
    </string-array>
    <string-array name="SET_DIGIT">
        <item>0の付く日</item>
        <item>1の付く日</item>
        <item>2の付く日</item>
        <item>3の付く日</item>
        <item>4の付く日</item>
        <item>5の付く日</item>
        <item>6の付く日</item>
        <item>7の付く日</item>
        <item>8の付く日</item>
        <item>9の付く日</item>
    </string-array>
    <string-array name="SET_SPECIAL_DAY">
        <item>ゾロ目</item>
        <item>月と日が同じ</item>
    </string-array>
    <string-array name="SET_MONTH">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>
    <string-array name="SET_DAY">
        <item>1日</item>
        <item>2日</item>
        <item>3日</item>
        <item>4日</item>
        <item>5日</item>
        <item>6日</item>
        <item>7日</item>
        <item>8日</item>
        <item>9日</item>
        <item>10日</item>
        <item>11日</item>
        <item>12日</item>
        <item>13日</item>
        <item>14日</item>
        <item>15日</item>
        <item>16日</item>
        <item>17日</item>
        <item>18日</item>
        <item>19日</item>
        <item>20日</item>
        <item>21日</item>
        <item>22日</item>
        <item>23日</item>
        <item>24日</item>
        <item>25日</item>
        <item>26日</item>
        <item>27日</item>
        <item>28日</item>
        <item>29日</item>
        <item>30日</item>
        <item>31日</item>
    </string-array>
    <string-array name="SET_WEEK_IN_MONTH">
        <item>第1</item>
        <item>第2</item>
        <item>第3</item>
        <item>第4</item>
        <item>第5</item>
    </string-array>
    <string-array name="SET_WEEK_ID">
        <item>日曜日</item>
        <item>月曜日</item>
        <item>火曜日</item>
        <item>水曜日</item>
        <item>木曜日</item>
        <item>金曜日</item>
        <item>土曜日</item>
    </string-array>
    <string-array name="SET_TAIL_NUMBER">
        <item>末尾0</item>
        <item>末尾1</item>
        <item>末尾2</item>
        <item>末尾3</item>
        <item>末尾4</item>
        <item>末尾5</item>
        <item>末尾6</item>
        <item>末尾7</item>
        <item>末尾8</item>
        <item>末尾9</item>
    </string-array>
    <string name="plus">プラス</string>
    <string name="minus">マイナス</string>
    <string name="update">更新</string>
    <string name="db_delete_tittle">データ削除について</string>
    <string name="menu_item01">編集モード</string>
    <string name="menu_item02">加減算モード</string>
    <string name="menu_item03">ステルス機能</string>
    <string name="menu_item04">バイブON/OFF</string>
    <string name="menu_item05">フラッシュON/OFF</string>
    <string name="menu_item06">カウンター初期化</string>
    <string name="update_date">データ更新</string>
    <string name="date"> 日付</string>
    <string name="store_name"> 店舗名</string>
    <string name="table_number"> 台番号</string>
    <string name="medal"> 差枚数</string>
    <string name="update_button">更新</string>
</resources>