<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/item1"
        android:title="@string/menu_item01"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/item2"
        android:title="@string/menu_item02"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/item3"
        android:title="@string/menu_item03"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/item4"
        android:title="@string/menu_item04"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/item5"
        android:title="@string/menu_item05"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/item6"
        android:title="@string/menu_item06"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>